# personal-brain-mcp

./: .env.template  .gitignore  ARCHITECTURE_DIAGRAM.md  CHAT_MANAGEMENT_COMPLETE.md  CHAT_MANAGEMENT_GUIDE.md  CLAUDE.md  CLAUDE_DESKTOP_SETUP.md  FINAL_PUBLISHING_GUIDE.md  MANIFEST.in  NPM_PUBLISHING.md  PUBLISHING.md  README.md  SETUP_SUCCESS.md  claude_desktop_config.json  claude_desktop_config_alternative.json  hybrid-instructions.md  main.py  mcp_server.py  publish.sh  pyproject.toml  services.py  setup_mcp.md  start_mcp_server.sh  test_mcp_startup.py  test_setup.py
frontend/: README.md  index.html
frontend-next/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend-next/app/: globals.css  layout.tsx  page.tsx
frontend/css/: styles.css
frontend/js/: app.js
npm-package/: .env.example  .npmignore  README.md  package.json  personal-brain-mcp-1.0.0.tgz  publish-npm.sh
npm-package/python-src/: __init__.py  pyproject.toml  requirements.txt  server.py
npm-package/scripts/: cleanup.js  install-python-deps.js  test.js
personal-brain-mcp/: LICENSE  README.md  build.py  install-npx.sh  install-uvx.sh  package-lock.json  package.json  personal-brain-mcp-1.0.0.tgz  pyproject.toml  test-install.py
personal-brain-mcp/lib/: install.js
personal-brain-mcp/src/personal_brain_mcp/: __init__.py  main.py  models.py  server.py  services.py
personal_brain_mcp/: config.py  services.py
personal_brain_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
