[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-brain-mcp"
version = "1.0.0"
description = "MCP Server for Personal Brain API - provides AI-powered knowledge management tools for Claude Desktop"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Personal Brain MCP", email = "contact@example.com"}
]
keywords = ["mcp", "ai", "knowledge-management", "claude", "anthropic", "rag", "vector-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.0.0",
    "pinecone-client>=3.0.0",
    "langchain>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langchain-anthropic>=0.1.0",
    "langchain-openai>=0.1.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.6",
    "pypdf2>=3.0.0",
    "python-docx>=0.8.11",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/personal-brain-mcp"
Repository = "https://github.com/your-username/personal-brain-mcp.git"
Documentation = "https://github.com/your-username/personal-brain-mcp#readme"
Issues = "https://github.com/your-username/personal-brain-mcp/issues"

[project.scripts]
personal-brain-mcp = "personal_brain_mcp.server:main"
pb-mcp = "personal_brain_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/personal_brain_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"